--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 </p>
                 <p class="intro__content">
                     <span class="intro__content-line intro__content-line--small">Website Spesial Dibuat Limited Edition Untuk</span>
-                    <span class="intro__content-line">PUTRI OLIPIA MAHARANI</span>
+                    <span class="intro__content-line">ALLO PUTRI SILAKAN MASUK</span>
                 </p>
             </div>
             <div class="screen screen--flex action">
                 <span class="action__line">PUTRI OLIPIA MAHARANI</span>
-                <button id="play-btn" class="button button--box" onclick="openFullscreen();">Mulai Sekarang</button>
+                <button id="play-btn" class="button button--box" onclick="openFullscreen();">MASUKKKK</button>
             </div>
         </main>
         <div id="p5_loading" class="p5_loading">
