--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 </p>
                 <p class="intro__content">
                     <span class="intro__content-line intro__content-line--small">Website Spesial Dibuat Limited Edition Untuk</span>
-                    <span class="intro__content-line">ALLO PUTRI SILAKAN MASUK</span>
+                    <span class="intro__content-line">PUTRI OLIPIA MAHARANI</span>
                 </p>
             </div>
             <div class="screen screen--flex action">
-                <span class="action__line">PUTRI OLIPIA MAHARANI</span>
+                <span class="action__line">SELAMAT SIANG MBA PUTRI</span>
                 <button id="play-btn" class="button button--box" onclick="openFullscreen();">MASUKKKK</button>
             </div>
         </main>
